--- a/src/AppBundle/Resources/views/Publication/publication.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.html.twig
@@ -12,6 +12,19 @@
     <script src="{{ asset('assets/vendor/moment/moment.js') }}"></script>
     <script src="{{ asset('assets/vendor/moment/locale/ru.js') }}"></script>
     <script src="{{ asset('assets/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js') }}"></script>
+    {% if poll is defined and poll != null %}
+        <script src="{{ asset('bundles/app/js/highcharts.js') }}"></script>
+        <script src="{{ asset('bundles/app/js/jquery.highchartTable-min.js') }}"></script>
+        <script>
+            $(document).ready(function() {
+                $('table.highchart')
+                        .bind('highchartTable.beforeRender', function(event, highChartConfig) {
+                            highChartConfig.colors = ['#DD0000', '#88CCCC', '#228E8E', '#CCFFFF', '#00CCCC', '#3399CC'];
+                        })
+                        .highchartTable();
+            });
+        </script>
+    {% endif %}
     <script>
         $(document).ready(function () {
             $('.like').click(function () {
@@ -134,6 +147,43 @@
                                     </video>
                                 </div>
                             {% endif %}
+                            <form class="form-horizontal" method="POST" action="{{ path('publication_poll', {'id' : poll.id }) }}">
+                                <hr />
+                                <h4>Опрос:</h4>
+                                <div class=""><strong>{{ poll.title }}</strong></div>
+                                {% if app.session.get('poll-'~poll.id) != true %}
+                                    {% for q in poll.questions %}
+                                        <div class="radio">
+                                            <label class="required">
+                                                <input type="radio" name="poll[{{ poll.id }}]" required="required" value="{{ q.id }}">{{ q.title }}
+                                            </label>
+                                        </div>
+                                    {% endfor %}
+                                    <div>
+                                        <br />
+                                        <button type="submit" class="btn btn-primary">Ответить</button>
+                                    </div>
+                                    <br />
+                                    <br />
+                                    </form>
+                                {% else %}
+                                    <table class="highchart" data-graph-container-before="1" data-graph-type="column" style="display:none" data-graph-inverted="1" data-graph-height="250">
+                                        <thead>
+                                        <tr>
+                                            <th></th>
+                                            <th>Количество ответов</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        {% for q in poll.questions %}
+                                            <tr>
+                                                <td>{{ q.title }}</td>
+                                                <td>{{ q.count }}</td>
+                                            </tr>
+                                        {% endfor %}
+                                        </tbody>
+                                    </table>
+                                {% endif %}
                             <div style="font-size: 16px">
                                 <strong>Вы можете оценить статью:</strong>
                                 <span class="like text-success"><span class="count">{{ publication.like }}</span><i class="fa {{ app.session.get('like-'~publication.id) == 1 ? 'fa-thumbs-up' : 'fa-thumbs-o-up' }}" aria-hidden="true" data-id="{{ publication.id }}"></i></span>
