--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -142,9 +142,9 @@
                 <div class="text-left">
                     {{ render(controller("AppBundle:Widget:importants" )) }}
                     {{ render(controller("AppBundle:Widget:banner" )) }}
-                    <div>
-                        <script class="hh-script" src="https://api.hh.ru/widgets/vacancies/search?count=4&locale=RU&links_color=dd0000&border_color=dd0000&text=%D0%92%D1%80%D0%B0%D1%87&area=1&show_region=true&currency=RUR&only_with_salary=true"></script>
-                    </div>
+                    {#<div>#}
+                        {#<script class="hh-script" src="https://api.hh.ru/widgets/vacancies/search?count=4&locale=RU&links_color=dd0000&border_color=dd0000&text=%D0%92%D1%80%D0%B0%D1%87&area=1&show_region=true&currency=RUR&only_with_salary=true"></script>#}
+                    {#</div>#}
                 </div>
             </div>
         </div>
