--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -53,6 +53,38 @@
         <td style="background: #f00000; font-size: 3px" colspan="2"><br /></td>
     </tr>
     <tr>
+        <td colspan="2" style="font-size: 16px"><br></td>
+    </tr>
+
+    {# Рекламный блок #}
+    <tr style="background: #FFF" bgcolor="#FFF">
+        <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
+            <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
+                <a href="https://medalmanah.ru/banner-concurs" target="_blank" style="color: #f00000">
+                    <img src="https://medalmanah.ru/upload/banner/1478873852.jpeg" style="width: 160px" alt="Конкурс клинических наблюдений" title="Конкурс клинических наблюдений">
+                </a>
+            </span>
+        </td>
+        <td style="text-align: left; font-size: 16px" align="left" >
+            <div><a href="https://medalmanah.ru/banner-concurs" target="_blank" style="color: #f00000"><strong>Конкурс клинических наблюдений!</strong></a></div>
+            <p style="font-size: 10pt">
+                Сроки проведения конкурса 25.05.2016 – 30.05.2017. Работы принимаются с 10.06.2016 по 28.02.2017
+                <br />
+                <br />
+                Награждение победителей состоится на <b>XIХ Международном конгрессе по антимикробной терапии</b>.
+                О наградах Вы можете узнать в Положении о Конкурсе.
+            </p>
+        </td>
+    </tr>
+    {# Рекламный блок #}
+
+    <tr>
+        <td colspan="2" style="font-size: 16px"><br></td>
+    </tr>
+    <tr>
+        <td style="background: #f00000; font-size: 3px" colspan="2"><br /></td>
+    </tr>
+    <tr>
         <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
