--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -72,7 +72,8 @@
                 <br />
                 <br />
                 Награждение победителей состоится на <b>XIХ Международном конгрессе по антимикробной терапии</b>.
-                О наградах Вы можете узнать в Положении о Конкурсе.
+                <br />
+                О наградах Вы можете узнать <a href="https://medalmanah.ru/banner-concurs" target="_blank">в Положении о Конкурсе</a>.
             </p>
         </td>
     </tr>
