--- a/src/AppBundle/Resources/views/Default/bannerConcurs.html.twig
+++ b/src/AppBundle/Resources/views/Default/bannerConcurs.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <br />
     <br />
-    <div class="title"><h1>Переход на страницу "Конкурс клинических наблюдений" через <span id="sec">3</span> сек.</h1></div>
+    <div class="title text-center"><h1>Переход на страницу "Конкурс клинических наблюдений" <br /> произойдет через <span id="sec">3</span> сек.</h1></div>
 {% endblock %}
 
 {% block javascript %}
