--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -937,3 +937,6 @@ nav .navbar-nav li.active a:hover{
         content: "\f165";
     }
 }
+.ya-share2__list.ya-share2__list_direction_horizontal{
+    width: 100%;
+}
