--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -205,6 +205,6 @@
         <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
 </table>
-<img src="https://medalmanah.ru/analytics/getimage/firstdelivery/{{ id }}"/>
+{#<img src="https://medalmanah.ru/analytics/getimage/firstdelivery/{{ id }}"/>#}
 </body>
 </html>
