--- a/src/AppBundle/Resources/views/Default/partners.html.twig
+++ b/src/AppBundle/Resources/views/Default/partners.html.twig
@@ -29,25 +29,23 @@
         <div class="row">
             <div class="col-sm-4 col-md-3">
                 <div class="thumbnail">
-                    <a href="#content-{{ p.id }}" class="fancybox"><img src="{{ p.image.path }}" style="max-height: 150px;"></a>
-                </div>
-            </div>
-            <div class="col-sm-4 col-md-3">
-                <div class="caption" style="color: #333">
-                    <a href="#content-{{ p.id }}" class="fancybox" style="text-decoration: none">
-                        <h3 style="color: #333; margin-top: 0">{{ p.title }}</h3>
-                    </a>
-                    <p style="color: #333">{{ p.shortDescription | slice(0,150) }}</p>
-                    <p style="color: #333 !important;">Ссылка: <a href="{{ p.link }}">{{ p.link }}</a></p>
-                </div>
-            </div>
-            <div style="display: none">
-                <div id="content-{{ p.id }}">
-                    <h2>{{ p.title }}</h2>
                     <img src="{{ p.image.path }}" style="max-height: 150px;">
-                    {{ p.body | raw }}
                 </div>
             </div>
+            <div class="col-sm-8 col-md-9">
+                <div class="caption" style="color: #333">
+                    <h3 style="color: #333; margin-top: 0">{{ p.title }}</h3>
+                    <p style="color: #333">{{ p.shortDescription | slice(0,150) }}</p>
+                    <p style="color: #333 !important;">Ссылка: <noindex><a href="{{ p.link }}">{{ p.link }}</a></noindex></p>
+                </div>
+            </div>
+            {#<div style="display: none">#}
+                {#<div id="content-{{ p.id }}">#}
+                    {#<h2>{{ p.title }}</h2>#}
+                    {#<img src="{{ p.image.path }}" style="max-height: 150px;">#}
+                    {#{{ p.body | raw }}#}
+                {#</div>#}
+            {#</div>#}
         </div>
     {% endfor %}
 
