--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -26,8 +26,8 @@
                     applyLabel: 'Выбрать'
                 },
 //                singleDatePicker: true,
-                startDate: moment(),
-                endDate: moment().add('1', 'month'),
+//                startDate: moment(),
+//                endDate: moment().add('1', 'month'),
                 applyClass: 'btn-primary'
             });
 
