--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -68,8 +68,8 @@
     <link rel="stylesheet" href="{{ asset('assets/vendor/jquery-ui/themes/base/jquery-ui.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/vendor/jquery-ui/themes/base/theme.css') }}">
     <style>
-        .daterangepicker{
-            max-width: 600px;
+        .daterangepicker.dropdown-menu{
+            max-width: 600px !important;
         }
         .ui-autocomplete{
             font-size: 14px;
