--- a/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
@@ -6,7 +6,7 @@
 			<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 				<div class="email-confirm">
 					<div class=""> <i class="img-confirm"></i>
-						<div class="alert alert-info">Подтверждление почты успешно. Приятной работы.</div>
+						<div class="alert alert-info">Подтверждение почты успешно. Приятной работы.</div>
 					</div>
 				</div>
 			</div>
