--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -940,3 +940,16 @@ nav .navbar-nav li.active a:hover{
 .ya-share2__list.ya-share2__list_direction_horizontal{
     width: 100%;
 }
+
+.daterangepicker.dropdown-menu{
+    max-width: 600px !important;
+}
+.ui-autocomplete{
+    font-size: 14px;
+}
+.ui-widget-content .ui-state-focus{
+    background: rgba(221, 0, 0, 0.18);
+}
+.daterangepicker td.active, .daterangepicker td.active:hover{
+    background-color: #dd0000;
+}
