--- a/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
@@ -1,82 +1,10 @@
 {% extends '@FOSUser/fos_layout.html.twig' %}
 
-
-{% block styles %}
-  {{ parent() }}
-
-{% endblock %}
-
-{% block javascripts %}
-  {{ parent() }}
-  <script src="{{ asset('bundles/app/js/mask.js') }}"></script>
-  <script>
-  </script>
-{% endblock %}
-
 {% block fos_user_content %}
-  <link rel="stylesheet" href="{{ asset('assets/vendor/jquery-ui/themes/base/jquery-ui.css') }}">
-  <link rel="stylesheet" href="{{ asset('assets/vendor/jquery-ui/themes/base/theme.css') }}">
-  <script src="{{ asset('assets/vendor/jquery-ui/jquery-ui.min.js') }}"></script>
-  <script>
-    $(document).ready(function () {
-      $( ".university" ).autocomplete({
-        source: function( request, response ) {
-          $.ajax({
-            url: Routing.generate('get_university'),
-            dataType: "json",
-            data: {
-              title: request.term
-            },
-            success: function( data ) {
-              response( data );
-            }
-          });
-        },
-        minLength: 3,
-        select: function( event, ui ) {
-          $( ".university").val(ui.item);
-        },
-        open: function() {
-          $( this ).removeClass( "ui-corner-all" ).addClass( "ui-corner-top" );
-        },
-        close: function() {
-          $( this ).removeClass( "ui-corner-top" ).addClass( "ui-corner-all" );
-        }
-      });
-
-      $( ".city" ).autocomplete({
-        source: function( request, response ) {
-          $.ajax({
-            url: Routing.generate('get_city'),
-            dataType: "json",
-            data: {
-              title: request.term
-            },
-            success: function( data ) {
-              response( data );
-            }
-          });
-        },
-        minLength: 3,
-        select: function( event, ui ) {
-          $( ".city").val(ui.item);
-        },
-        open: function() {
-          $( this ).removeClass( "ui-corner-all" ).addClass( "ui-corner-top" );
-        },
-        close: function() {
-          $( this ).removeClass( "ui-corner-top" ).addClass( "ui-corner-all" );
-        }
-      });
-
-
-    });
-  </script>
-
   <div class="panel-tab-body">
     <div class="account-content">
       <div class="row">
-        <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+        <div class="col-xs-12 col-sm-7 col-sm-offset-2">
           {{ form_errors(form) }}
           <div class="title text-uppercase"><div>Профиль</div></div>
           {{ form_start(form, {'action': path('fos_user_profile_edit'), 'attr': {'id': 'registration_form'}}) }}
@@ -87,10 +15,11 @@
           {{ form_row(form.firstName) }}
           {{ form_row(form.surName) }}
           {{ form_row(form.birthDate) }}
+          <hr />
+          {{ form_row(form.city) }}
           {{ form_row(form.phone) }}
           {#<hr />#}
           {#{{ form_row(form.country) }}#}
-          {#{{ form_row(form.city) }}#}
           {#<hr />#}
           {#<div class="edit-title text-uppercase">Информация об образовании</div>#}
           {#{{ form_row(form.university) }}#}
