--- a/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit.html.twig
@@ -9,7 +9,7 @@
           <div class="title text-uppercase"><div>Профиль</div></div>
           {{ form_start(form, {'action': path('fos_user_profile_edit'), 'attr': {'id': 'registration_form'}}) }}
           {#{{ form_widget(form.) }}#}
-          {{ form_row(form.username) }}
+          {#{{ form_row(form.username) }}#}
           {{ form_row(form.email) }}
           {{ form_row(form.lastName) }}
           {{ form_row(form.firstName) }}
