--- a/src/AdminBundle/Resources/views/menu.html.twig
+++ b/src/AdminBundle/Resources/views/menu.html.twig
@@ -20,6 +20,12 @@
             </a>
         </li>
         <li class="">
+            <a href="{{ path('admin_organization_list') }}">
+                <i class="glyphicon glyphicon-info-sign"></i>
+                Организации
+            </a>
+        </li>
+        <li class="">
             <a href="{{ path('admin_specialty_list') }}">
                 <i class="glyphicon glyphicon-info-sign"></i>
                 Специальности
