--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -77,11 +77,10 @@
             {#</p>#}
         {#</td>#}
     {#</tr>#}
+    {#<tr>#}
+        {#<td colspan="2" style="font-size: 16px"><br></td>#}
+    {#</tr>#}
     {# Рекламный блок #}
-
-    <tr>
-        <td colspan="2" style="font-size: 16px"><br></td>
-    </tr>
     <tr>
         <td style="background: #f00000; font-size: 3px" colspan="2"><br /></td>
     </tr>
