--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -34,6 +34,7 @@
                         <li><a href="{{ path('events',{'url': 'russian-events'}) }}">Российские</a></li>
                         <li><a href="{{ path('events',{'url': 'foreign-events'}) }}">Зарубежные</a></li>
                         <li><a href="{{ path('events_map') }}">Карта мероприятий</a></li>
+                        <li><a href="{{ path('events',{'url': 'school'}) }}">Школы</a></li>
                     </ul>
                 </div>
             </li>
