--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -34,7 +34,6 @@
                         <li><a href="{{ path('events',{'url': 'russian-events'}) }}">Российские</a></li>
                         <li><a href="{{ path('events',{'url': 'foreign-events'}) }}">Зарубежные</a></li>
                         <li><a href="{{ path('events_map') }}">Карта мероприятий</a></li>
-                        <li><a href="{{ path('events',{'url': 'school'}) }}">Школы</a></li>
                     </ul>
                 </div>
             </li>
@@ -42,9 +41,10 @@
                 <a href="{{ path('page',{'url' : 'about'}) }}">Образование</a>
                 <div class="submenu">
                     <ul class="submenu-items">
-                        <li><a href="{{ path('events',{'url': 'fpdo-courses'}) }}">КУРСЫ ФПДО</a></li>
-                        <li><a href="{{ path('events',{'url': 'online-courses'}) }}">ОНЛАЙН ОБУЧЕНИЕ</a></li>
-                        <li><a href="{{ path('events',{'url': 'internships'}) }}">СТАЖИРОВКИ</a></li>
+                        <li><a href="{{ path('events',{'url': 'fpdo-courses'}) }}">Курсы ФПДО</a></li>
+                        <li><a href="{{ path('events',{'url': 'online-courses'}) }}">Онлайн обучение</a></li>
+                        <li><a href="{{ path('events',{'url': 'internships'}) }}">Стажировки</a></li>
+                        <li><a href="{{ path('events',{'url': 'school'}) }}">Школы</a></li>
                     </ul>
                 </div>
             </li>
