--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -13,7 +13,7 @@
     font-style: normal;
 }
 
-@color-red: #DD0000;
+@color-red: #6dc265;
 @color-white: #FFFFFF;
 @color-black: #383838;
 
@@ -132,10 +132,10 @@ h1.blue-text{
     border-radius: 0;
 }
 .form-control:focus{
-    border-color: rgba(252, 17, 60, 0.57);
+    border-color: rgba(80, 135, 91, 0.57);
     outline: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(252, 17, 60, .6);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(252, 17, 60, .6);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(80, 135, 91, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(80, 135, 91, 0.6);
 }
 .header>div{
     height: 100%;
@@ -951,5 +951,5 @@ nav .navbar-nav li.active a:hover{
     background: rgba(221, 0, 0, 0.18);
 }
 .daterangepicker td.active, .daterangepicker td.active:hover{
-    background-color: #dd0000;
+    background-color: #50875b;
 }
