--- a/src/AppBundle/Resources/views/Widget/importants.html.twig
+++ b/src/AppBundle/Resources/views/Widget/importants.html.twig
@@ -1,6 +1,6 @@
 <div class="side_menu white-block calend thumbnail" style="max-width: 225px">
     <a class="calend-title" href="#">
-        <div class="text-center"><a href="{{ path('medical_calendar') }}"><h3>Медицинский календарь</h3></a></div>
+        <div class="text-center"><a href="{{ path('medical_calendar') }}"><h3>Календарь сельскохозяйственных мероприятий</h3></a></div>
     </a>
     <div class="calend-content">
         <div class="text-center"><b>сегодня {{ dateStr }}</b></div>
