--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -12,6 +12,13 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "ImpactRegular";
+  src: url("/bundles/app/fonts/ImpactRegular/ImpactRegular.eot");
+  src: url("/bundles/app/fonts/ImpactRegular/ImpactRegular.eot?#iefix") format("embedded-opentype"), url("/bundles/app/fonts/ImpactRegular/ImpactRegular.woff") format("woff"), url("/bundles/app/fonts/ImpactRegular/ImpactRegular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
 html {
   height: 100%;
 }
@@ -23,8 +30,14 @@ body {
   overflow-x: hidden;
   font-size: 15px;
 }
-h1 {
-  font-family: 'Georgia, serif';
+h1,
+h2,
+h3 {
+  font-family: 'ImpactRegular';
+  color: #48754e;
+}
+h3 {
+  font-size: 18px;
 }
 .table-layout {
   display: table;
@@ -38,21 +51,21 @@ h1 {
   padding: 0 20px;
 }
 .col-fixed-300 {
-  width: 240px;
+  width: 400px;
 }
 .col-fixed-240 {
   width: 240px;
 }
 a {
   cursor: pointer !important;
-  color: #6dc265;
+  color: #48754e;
 }
 a:hover {
-  color: #9b0d27;
+  color: #375b3c;
 }
 a:hover,
 a:focus {
-  color: #9b0d27;
+  color: #375b3c;
 }
 .btn-danger {
   background: #c9302c;
@@ -90,8 +103,7 @@ a:focus {
 }
 h1.blue-text {
   font-size: 22px;
-  color: #333;
-  font-family: 'HelveticaNeue-Light';
+  color: #48754e;
 }
 .blue-text {
   color: #6dc265;
@@ -144,7 +156,7 @@ h1.blue-text {
   width: 300px;
 }
 .navbar-form {
-  padding-top: 23px;
+  padding-top: 4px;
 }
 .register-btn {
   padding-top: 36px;
@@ -170,6 +182,7 @@ nav.navbar {
   margin-left: -15px;
   margin-right: -15px;
   border: 0;
+  font-family: 'ImpactRegular';
 }
 nav .navbar-nav {
   border-radius: 0;
@@ -195,7 +208,8 @@ nav .navbar-nav li.active a {
   background: #6dc265;
 }
 nav .navbar-nav li a {
-  padding-bottom: 8px;
+  padding-bottom: 10px;
+  padding-top: 11px;
   color: #383838;
 }
 nav .navbar-nav li a:hover {
@@ -234,7 +248,7 @@ nav .navbar-nav li .submenu .submenu-items li a {
   background: #DDD;
 }
 nav .navbar-nav li .submenu .submenu-items li a:hover {
-  color: #6dc265;
+  color: #48754e;
   background: #CCC;
 }
 nav .navbar-nav li:hover .submenu {
@@ -262,7 +276,7 @@ nav .navbar-nav li:hover a {
 }
 .title {
   border-bottom: 1px solid #383838;
-  color: #6dc265;
+  color: #48754e;
   font-size: 16px;
   margin-bottom: 20px;
 }
@@ -270,8 +284,10 @@ nav .navbar-nav li:hover a {
   border-bottom: 2px solid #383838;
   display: inline-block;
   padding: 5px 10px;
-  font-size: 22px;
+  font-size: 18px;
   margin: 0;
+  color: #48754e;
+  font-weight: normal;
 }
 .new-item {
   padding-bottom: 10px;
