--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -12,6 +12,15 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: "ImpactRegular";
+    src: url("/bundles/app/fonts/ImpactRegular/ImpactRegular.eot");
+    src: url("/bundles/app/fonts/ImpactRegular/ImpactRegular.eot?#iefix")format("embedded-opentype"),
+    url("/bundles/app/fonts/ImpactRegular/ImpactRegular.woff") format("woff"),
+    url("/bundles/app/fonts/ImpactRegular/ImpactRegular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
 
 @color-red: #6dc265;
 @color-white: #FFFFFF;
@@ -30,8 +39,12 @@ body{
     font-size: 15px;
 
 }
-h1{
-    font-family: 'Georgia, serif';
+h1, h2, h3{
+    font-family: 'ImpactRegular';
+    color: #48754e;
+}
+h3{
+    font-size: 18px;
 }
 
 .table-layout {
@@ -46,7 +59,7 @@ h1{
     padding: 0 20px;
 }
 .col-fixed-300 {
-    width:240px;
+    width:400px;
 }
 .col-fixed-240{
     width:240px;
@@ -54,13 +67,13 @@ h1{
 
 a{
     cursor: pointer !important;
-    color: @color-red;
+    color: #48754e;
     &:hover{
-        color: #9b0d27;
+        color: #375b3c;
     }
 }
 a:hover, a:focus{
-    color: #9b0d27;
+    color: #375b3c;
 }
 .btn-danger{
     background: #c9302c;
@@ -92,8 +105,7 @@ a:hover, a:focus{
 //}
 h1.blue-text{
     font-size: 22px;
-    color: #333;
-    font-family: 'HelveticaNeue-Light';
+    color: #48754e;
 }
 
 .blue-text{
@@ -148,7 +160,7 @@ h1.blue-text{
     width: 300px;
 }
 .navbar-form{
-    padding-top: 23px;
+    padding-top: 4px;
 }
 .register-btn{
     padding-top: 36px;
@@ -175,6 +187,7 @@ nav{
         margin-left: -15px;
         margin-right: -15px;
         border: 0;
+        font-family: 'ImpactRegular';
     }
     .navbar-nav{
         border-radius: 0;
@@ -203,7 +216,8 @@ nav{
                 background: @color-red;
             }
             a{
-                padding-bottom: 8px;
+                padding-bottom: 10px;
+                padding-top: 11px;
                 color: @color-black;
                 &:hover{
                     background: none;
@@ -245,7 +259,7 @@ nav{
                             color: #333;
                             background: #DDD;
                             &:hover{
-                                color: @color-red;
+                                color: #48754e;
                                 background: #CCC;
                             }
                         }
@@ -286,15 +300,17 @@ nav .navbar-nav li:hover{
 }
 .title{
     border-bottom: 1px solid @color-black;
-    color: @color-red;
+    color: #48754e;
     font-size: 16px;
     margin-bottom: 20px;
     h1{
         border-bottom: 2px solid @color-black;
         display: inline-block;
         padding: 5px 10px;
-        font-size: 22px;
+        font-size: 18px;
         margin: 0;
+        color: #48754e;
+        font-weight: normal;
     }
 }
 .new-item{
