--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -53,9 +53,9 @@
 {% endblock %}
 
 {% block seo %}
-    <title>Альманах медицинских событий </title>
-    <meta name="description" content="Закрытая социально-информационная среда, где представлены медицинские новости, события, новейшие исследования, трансляции с мероприятий и другая информация"/>
-    <meta name="keywords" content="медицинские мероприятия, новости, трансляции событий, медицинские калькуляторы, федеральный стандарты"/>
+    <title>Агронайзер </title>
+    <meta name="description" content=""/>
+    <meta name="keywords" content=""/>
 {% endblock %}
 
 {% block topBody %}
@@ -109,7 +109,7 @@
             {% endfor %}
             <br />
             <div class="text-left">
-                <a href="{{ path('publications_by_category') }}" style="font-size: 15px; text-decoration: underline;"><b>Читать все новости медицины</b></a>
+                <a href="{{ path('publications_by_category') }}" style="font-size: 15px; text-decoration: underline;"><b>Все новости сельского хозяйства</b></a>
             </div>
         </div>
     </div>
