--- a/src/AppBundle/Resources/views/Widget/upcomingEvents.html.twig
+++ b/src/AppBundle/Resources/views/Widget/upcomingEvents.html.twig
@@ -1,22 +1,9 @@
+<div class="title"><h1>Мероприятия</h1></div>
 <div>
     {% for e in events %}
-        <div class="thumbnail">
-            <div class="caption" style="overflow: hidden">
-                {#<table>#}
-                    {#<tr>#}
-                        {#<td style="vertical-align: top">#}
-                            {#{% if e.preview.path is defined %}#}
-                                {#<img src="{{ e.preview.path }}" style="max-width: 64px; padding-right: 10px">#}
-                            {#{% endif %}#}
-                        {#</td>#}
-                        {#<td style="vertical-align: top">#}
-                            <p style="margin-bottom: 10px; font-size: 13px; color: #555">{{ e.start | date('d.m.Y') }} - {{ e.end | date('d.m.Y') }}</p>
-                            <h5 style="margin-top: 0"><a href="{{ path('event',{'url' : e.id}) }}">{{ e.title }}</a></h5>
-                            <p style="margin: 0; font-size: 13px; color: #555">{{ e.city }}</p>
-                        {#</td>#}
-                    {#</tr>#}
-                {#</table>#}
-            </div>
-        </div>
+    <h5 style="margin-top: 0"><a href="{{ path('event',{'url' : e.id}) }}">{{ e.title }}</a></h5>
+        {#<p style="margin: 0; font-size: 13px; color: #555">{{ e.city }}</p>#}
+        <p>{{ e.anons | raw }}</p>
+            <p style="margin-bottom: 10px; font-size: 13px; color: #555">{{ e.start | date('d.m.Y') }} - {{ e.end | date('d.m.Y') }}</p>
     {% endfor %}
 </div>
