--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -41,7 +41,7 @@
         <meta property="og:title" content="Медицинский альманах событий">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://medalmanah.ru">
-        <meta property="og:image" content="https://medalmanah.ru/bundles/app/images/logo.png">
+        <meta property="og:image" content="{{ asset('bundles/app/images/logo5.png') }}">
     {% endblock %}
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('assets/vendor/reset-css/reset.css') }}">
@@ -66,8 +66,8 @@
 
     {% endblock %}
     {% block seo %}
-        <title>Альманах медицинских событий | medalmanah.ru</title>
-        <meta name="description" content="Все медицинские события, курсы, повышения квалификации в одном месте"/>
+        <title></title>
+        {#<meta name="description" content=""/>#}
     {% endblock %}
 </head>
 <body>
@@ -78,7 +78,7 @@
                 <div class="col-xs-3">
                     <div style="width: 250px">
                         <a href="{{ path('homepage') }}">
-                            <img src="{{ asset('bundles/app/images/logo.png') }}" id="logo" style=" float: left" all="Альманах медицинских событий">
+                            <img src="{{ asset('bundles/app/images/logo5.png') }}" id="logo" style=" float: left; margin-top: 10px" all="Альманах медицинских событий">
                         </a>
                     </div>
                 </div>
@@ -162,9 +162,11 @@
                         {#<a target="_blank" href="https://www.youtube.com/channel/UCgS0JAUqUpDojH6rIDXGfZA"><img src="{{ asset('bundles/app/images/icons/gp.png') }}" class="social-icon"></a>#}
                         {#<a target="_blank" href="http://ok.ru/group/57034519412770"><img src="{{ asset('bundles/app/images/icons/od.png') }}" class="social-icon"></a>#}
                         {#<img src="{{ asset('bundles/app/images/icons/icons.png') }}">#}
-                        <noindex><a href="https://new.vk.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_1.png') }}" alt="ВКонтакте"></a></noindex>
-                        <noindex><a href="https://twitter.com/medalmanah_ru" target="_blank"><img src="{{ asset('bundles/app/images/icons/tw.png') }}" alt="twitter" style="width: 39px"></a></noindex>
-                            <noindex><a href="https://www.facebook.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_3.png') }}" alt="Facebook"></a></noindex>
+                        
+                        {#<noindex><a href="https://new.vk.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_1.png') }}" alt="ВКонтакте"></a></noindex>#}
+                        {#<noindex><a href="https://twitter.com/medalmanah_ru" target="_blank"><img src="{{ asset('bundles/app/images/icons/tw.png') }}" alt="twitter" style="width: 39px"></a></noindex>#}
+                            {#<noindex><a href="https://www.facebook.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_3.png') }}" alt="Facebook"></a></noindex>#}
+                        <img src="{{ asset('bundles/app/images/social_many.png') }}">
                     </div>
                 </div>
                 <div class="contacts row">
