--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -13,14 +13,14 @@
     <div class="collapse navbar-collapse" id="menu">
         <ul class="nav navbar-nav">
             <li {{ app.request.attributes.get('_route') == 'news' or app.request.attributes.get('_route') == 'homepage' ? 'class="active"' : ''}} >
-                <a href="{{ path('news') }}">ПУБЛИКАЦИИ</a>
-                <div class="submenu">
-                    <ul class="submenu-items">
-                        <li><a href="{{ path('publications_by_category',{'category': 'news'}) }}">Новости</a></li>
-                        <li><a href="{{ path('publications_by_category',{'category': 'articles'}) }}">Статьи</a></li>
+                <a href="{{ path('news') }}">НОВОСТИ</a>
+                {#<div class="submenu">#}
+                    {#<ul class="submenu-items">#}
+                        {#<li><a href="{{ path('publications_by_category',{'category': 'news'}) }}">Новости</a></li>#}
+                        {#<li><a href="{{ path('publications_by_category',{'category': 'articles'}) }}">Статьи</a></li>#}
                         {#<li><a href="{{ path('publications_by_category',{'category': '2'}) }}">Клинические иследования</a></li>#}
-                    </ul>
-                </div>
+                    {#</ul>#}
+                {#</div>#}
             </li>
             <li {{
                     app.request.pathInfo == '/events' or
@@ -37,23 +37,23 @@
                     </ul>
                 </div>
             </li>
-            <li >
-                <a href="{{ path('page',{'url' : 'about'}) }}">Образование</a>
-                <div class="submenu">
-                    <ul class="submenu-items">
-                        <li><a href="{{ path('events',{'url': 'fpdo-courses'}) }}">Курсы ФПДО</a></li>
-                        <li><a href="{{ path('events',{'url': 'online-courses'}) }}">Онлайн обучение</a></li>
-                        <li><a href="{{ path('events',{'url': 'internships'}) }}">Стажировки</a></li>
-                        <li><a href="{{ path('events',{'url': 'school'}) }}">Школы</a></li>
-                    </ul>
-                </div>
-            </li>
+            {#<li >#}
+                {#<a href="{{ path('page',{'url' : 'about'}) }}">Образование</a>#}
+                {#<div class="submenu">#}
+                    {#<ul class="submenu-items">#}
+                        {#<li><a href="{{ path('events',{'url': 'fpdo-courses'}) }}">Курсы ФПДО</a></li>#}
+                        {#<li><a href="{{ path('events',{'url': 'online-courses'}) }}">Онлайн обучение</a></li>#}
+                        {#<li><a href="{{ path('events',{'url': 'internships'}) }}">Стажировки</a></li>#}
+                        {#<li><a href="{{ path('events',{'url': 'school'}) }}">Школы</a></li>#}
+                    {#</ul>#}
+                {#</div>#}
+            {#</li>#}
             <li >
                 <a href="#">Полезная информация</a>
                 <div class="submenu">
                     <ul class="submenu-items">
                         <li><a href="{{ path('federal-standards') }}">Федеральные стандарты</a></li>
-                        <li><a href="{{ path('abbreviations') }}">Медицинские сокращения</a></li>
+                        <li><a href="{{ path('page',{ 'url' : 'termins' }) }}">Термины</a></li>
                         <li><a href="{{ path('calculators') }}">Калькуляторы</a></li>
                     </ul>
                 </div>
