--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -969,3 +969,6 @@ nav .navbar-nav li.active a:hover{
 .daterangepicker td.active, .daterangepicker td.active:hover{
     background-color: #50875b;
 }
+h5 a{
+    font-weight:bold;
+}
